# as-writer

./: .gitignore  README.md  build.py  package.json
backend/: pyproject.toml
backend/src/backend/: api.py  appConfig.json  main.py  main.spec  writeShelfApi.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  customFuncs.js  main.js
frontend/src/assets/: theme.css
frontend/src/components/: HelloWorld.vue  Markmap.vue  book_card.vue  book_search.vue  book_shelf.vue  catalog.vue  data_statistics.vue  left_area.vue  new_book.vue  read_view.vue  setting_view.vue  write_shelf.vue  write_view.vue
frontend/src/router/: index.js
frontend/src/stores/: eventBus.js
frontend/src/tinymce-custom-plugins/: custom_mark.js
